testsuite/tests/typecheck/should_fail/T3592.stderr

T3592.hs:8:5: error:
    • Couldn't match type ‘a0’ with ‘T a’
      Expected: T a -> String
        Actual: a0 -> String
      Cannot instantiate unification variable ‘a0’
      with a type involving polytypes: T a
    • In the expression: show
      In an equation for ‘f’: f = show
    • Relevant bindings include
        f :: T a -> String (bound at T3592.hs:8:1)
